@@ -2,7 +2,7 @@
  * #%L
  * Fiji distribution of ImageJ for the life sciences.
  * %%
- * Copyright (C) 2010 - 2022 Fiji developers.
+ * Copyright (C) 2010 - 2024 Fiji developers.
  * %%
  * This program is free software: you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as
@@ -26,6 +26,7 @@ import net.imglib2.img.list.ListImg;
 import net.imglib2.img.list.ListRandomAccess;
 import org.jetbrains.annotations.NotNull;
 
+import java.lang.reflect.InvocationTargetException;
 import java.util.Iterator;
 
 /**
@@ -37,9 +38,9 @@ public class ListSearchImage<V> implements SearchImage<V> {
     private final ListRandomAccess<V> access;
 
     public ListSearchImage(final Class<V> clazz, final int width, final int height)
-            throws IllegalAccessException, InstantiationException {
+            throws IllegalAccessException, InstantiationException, IllegalArgumentException, InvocationTargetException, NoSuchMethodException, SecurityException {
 
-        this.img = new ListImg<>(new long[]{width, height}, clazz.newInstance()); // FIXME: Is this correct??
+        this.img = new ListImg<>(new long[]{width, height}, clazz.getDeclaredConstructor().newInstance()); // FIXME: Is this correct??
         this.access = img.randomAccess();
     }
 
